--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
   <body>
     <header>
       <a href="https://www.youtube.com/watch?v=mqqft2x_Aa4" target="_blank">
-        <img src="img/logo batman.png"/>
+        <img src="img/img-batman.png" alt="imagen batman"/>
       </a>
+      <h1>Curriculum vitae de bruce wayne</h1>
     </header>
     <main>
-      <h1>Curriculum vitae de bruce wayne</h1>
+      
       <div class="relleno">
 
       </div>
@@ -82,7 +83,3 @@
     </footer>
   </body>
 </html>
- 
-                    
- 
- 
